# APD-Restaurant-Violation-App

./: .gitignore  AGENTS.md  Makefile  README.md
backend/: .env  .env.example  AGENTS.md  composer.json
backend/app/Exceptions/: Handler.php
backend/app/Models/: Camera.php  Violation.php  ViolationDetail.php  ViolationType.php
backend/app/Providers/: AppServiceProvider.php
backend/bootstrap/: app.php
backend/database/factories/: CameraFactory.php  ViolationDetailFactory.php  ViolationFactory.php  ViolationTypeFactory.php
backend/database/migrations/: 2026_02_13_055634_create_violation_types_table.php  2026_02_13_065611_create_cameras_table.php  2026_02_13_073836_create_violations_table.php  2026_02_13_075539_create_violation_details_table.php  2026_02_13_192903_add_unique_to_code_in_violation_types_table.php  2026_02_19_062228_add_yolo_fields_to_cameras_table.php  AGENTS.md
backend/database/seeders/: CameraSeeder.php  DatabaseSeeder.php  UserSeeder.php  ViolationTypeSeeder.php
backend/routes/: api.php
backend/tests/Feature/: AuthControllerTest.php  CameraHealthIntegrationTest.php  DebugAuthTest.php  (+22 more)
frontend/: .env  .env.example  Dockerfile  Makefile  docker-compose.yml  index.html  nginx.conf  package.json  vitest.config.ts  vitest.setup.ts
frontend/e2e/: home-page.spec.ts
frontend/src/: config.ts  main.tsx  routeTree.gen.ts
yolo-service/: README.md  config.py  main.py  pyproject.toml
yolo-service/modules/: __init__.py  backend_client.py  ffmpeg_ops.py  hls_manager.py  http_server.py  sse_encoder.py  violation_queue.py  yolo_detector.py
(+75 files in other folders)
