[project]
name = "opencv-camera-cctv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.13",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.28.0",
]
